# currency_bot

./: README.md  bot.py  logining.py  logs.txt  privat_bank_api.py  pyproject.toml
socket_connection/: socket_client.py  socket_server.py
