[tool.poetry]
name = "5-async"
version = "0.1.0"
description = ""
authors = ["baskina <katyabaskina@gmail.com>"]
readme = "README.md"
packages = [{include = "5"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9"
aiofile = "^3.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

